postcss/testData/inspections/customPropertiesSet/incorrectCustomPropertiesSetName.pcss
@apply <error descr="Custom property set name should start with '--'">-my</error>;